--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,8 @@ drf-yasg==1.21.7
 
 # Utilities
 python-dateutil==2.8.2
+
+# Production server
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
