Add Render deployment configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,12 +3,15 @@ SECRET_KEY=django-insecure-change-this-in-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database
+# Database (Local Development)
 DB_NAME=procure_to_pay
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
+
+# Database (Production - Render provides this automatically)
+# DATABASE_URL=postgresql://user:password@host:port/dbname
 
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key-here
