--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     env: docker
     plan: free
     region: oregon
-    dockerfilePath: ./backend/Dockerfile.render
+    dockerfilePath: ./Dockerfile.render
     dockerContext: ./backend
     envVars:
       - key: DATABASE_URL
